styling for ipad complete. Like and delete buttons on mobile view need to be fixed

--- a/app/assets/stylesheets/playlists.scss
+++ b/app/assets/stylesheets/playlists.scss
@@ -227,7 +227,7 @@ input#search {
   padding-bottom:1.1rem;
   font-size:1.1rem;
   display:inline-block;
-  
+
 }
 .add-search-container a:hover {
 
@@ -267,7 +267,7 @@ input#search {
 }
 .playlist-details-title{
   display:inline-block;
-  
+
 }
 .playlist-code {
   border:1px solid #e1dde8;
@@ -280,11 +280,11 @@ input#search {
   position:absolute;
   left:50%;
   transform:translateX(-50%);
-  
+
 }
 
 #make-public {
-  
+
 }
 
 #make-public:hover {
@@ -301,7 +301,7 @@ input#search {
 }
 
 nav {
- 
+
   background: #23232D;
   padding-left: 1rem;
 }
@@ -394,7 +394,7 @@ button.downvote.btn.darken-2 {
     margin: 0px;
     line-height: 25px;
     vertical-align:top;
-    
+
     .user_info_left{
       display:inline-block;
     }
@@ -409,7 +409,7 @@ button.downvote.btn.darken-2 {
     padding-top:5px;
     a{
       display:block;
-      
+
     }
     .user_info_username{
       background-image:$ltr_gradient;
@@ -427,8 +427,8 @@ button.downvote.btn.darken-2 {
     vertical-align:top;
     padding-top:5px;
   }
- 
-  
+
+
 }
 
 .buttons {
@@ -439,14 +439,14 @@ button.downvote.btn.darken-2 {
 
 .fa-heart{
   color:#f75889;
-  
+
 }
 .fa-heart, .upvote, .downvote{
   font-size:1.5rem;
 }
 .heart{
   font-size:1.1rem;
-  
+
 }
 
 .nav_bar {
@@ -461,7 +461,7 @@ button.downvote.btn.darken-2 {
   .page_title{
   display: inline-block;
     .page_title_main{
-   
+
   font-weight:300;
       font-size:24px;
       font-family: 'Montserrat', sans-serif;
@@ -472,10 +472,10 @@ button.downvote.btn.darken-2 {
   font-weight:300;
       font-size:16px;
       font-weight:300;
-      
+
     }
 
-    
+
   }
   a{
    color:#666666;
@@ -570,8 +570,8 @@ button.downvote.btn.darken-2 {
   }
   .brand-logo{
     transform:none !important
-    
-    
+
+
     ;
     left: 5% !important;
   }
@@ -809,7 +809,7 @@ html{
       position:relative;
       margin-left:25px;
       margin-right:25px;
-      
+
 }
 .guestlist-playlist a:after{
            z-index: -1;
@@ -867,7 +867,7 @@ li.guest{
     border: none;
     border-radius: 2px;
     display: inline-block;
-   
+
     padding: .33rem 0.8rem;
     text-transform: uppercase;
     vertical-align: middle;
@@ -891,7 +891,7 @@ li.guest{
       width: 55px;
     height: 27px;
     border-radius: 30px;
-    
+
     background: #e9e9f2;
     position: relative;
         padding: 5px 10px;
@@ -918,16 +918,16 @@ li.guest{
     position: absolute;
     left: 3px;
     top: 3px;
-  
+
     transition: left .2s linear;
-    
+
 }
 .toggle_button:hover{
   cursor:pointer;
 }
 .toggle_button.active:after{
   left:32px;
- 
+
 }
 .netvote{
   display: inline-block;
@@ -993,7 +993,7 @@ li.guest{
   }
   .playlist-details-title{
     text-align: left;
-    
+
   }
   .playlist-host{
       padding-left: 0;
@@ -1052,15 +1052,15 @@ li.guest{
 
     height: 100%;
     line-height: 20px;
-   
+
     text-align:left;
     padding-bottom:20px;
-  
+
   }
 
   span.guestlist-playlist {
     width: 50%;
-    
+
   }
 
   .guestlist-playlist {
@@ -1070,11 +1070,12 @@ li.guest{
   #make-public {
     float: none;
     text-align:left;
+    margin-bottom: -7%;
   }
- 
+
   .playlist-name {
     padding-left: 0;
-    
+
   }
 
   //  Deezer Player
@@ -1093,8 +1094,8 @@ li.guest{
     /* font-size: 5px; */
     top: 0;
     right:0;
-    
-    
+
+
   }
   .buttons *{
     flex-grow:1;
@@ -1102,7 +1103,7 @@ li.guest{
   .guestlist-playlist a {
     border-radius: 0;
     color:white;
-   -webkit-background-clip: initial; 
+   -webkit-background-clip: initial;
     background-clip: initial;
     padding:10px 30px;
     margin-left:0;
@@ -1117,7 +1118,7 @@ li.guest{
   .delete_song_btn{
     border:none;
     margin-left:0;
-    
+
   }
   .fa-heart{
     font-size:1.5rem;
@@ -1149,7 +1150,7 @@ li.guest{
   }
 
   .song-in-queue.played, .song-in-queue.playing {
-    height: 5rem;
+    height: 6rem;
   }
 
   // 4 Star Playlists
@@ -1163,12 +1164,61 @@ li.guest{
   .added-by{
     padding-left: 1.5rem;
   }
-  
+
   // span.buttons {
   //   display: inline-block;
   //   position: relative;
   //   left: 39%;
   //   bottom: 9%;
   // }
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 800px){
+  .playlist-code{
+    border: 1px solid #e1dde8;
+    border-radius: 39px;
+    font-size: 13px;
+    padding: 10px;
+    display: inline-block;
+    margin: auto auto;
+    color: #444444;
+    position: absolute;
+    left: 32%;
+    transform: translateX(-50%);
+  }
+
+  .guestlist-playlist {
+    float: right;
+    opacity: 0.85;
+    margin: 0.25rem;
+    margin-top: 0.65rem;
+  }
+
+  .heart {
+    font-size: 1.3rem;
+    margin-left: 1rem;
+  }
+
+  .make_public_wrapper{
+    float: right;
+    opacity: 0.85;
+    text-transform: capitalize;
+    margin: 0.25rem;
+    margin-right: -5px;
+  }
+
+  .delete_song_btn{
+    color: #f35058;
+    border: 1px solid #f35058;
+    text-transform: none;
+    font-size: 1.5rem;
+    margin-left: 3rem;
+    padding: 0.1rem 2rem;
+  }
+
+}
+
+@media screen and (min-width: 375px) and (max-width: 600px){
 
 }
